[gd_scene load_steps=7 format=3 uid="uid://be6t0ckwre6sg"]

[ext_resource type="Script" path="res://Scripts/AudioPlayer.gd" id="1_nx56x"]
[ext_resource type="AudioStream" uid="uid://dbwuuko5iddyh" path="res://Audio/BG_music.mp3" id="2_jur0f"]
[ext_resource type="AudioStream" uid="uid://n0y6xecpvycr" path="res://Audio/click.wav" id="3_imk0r"]
[ext_resource type="AudioStream" uid="uid://w3slxwhdwnrf" path="res://Audio/click_correct_answer.wav" id="4_a7q57"]
[ext_resource type="AudioStream" uid="uid://bjgaor5t7d842" path="res://Audio/click_uncorrect_answer.wav" id="5_qgju1"]
[ext_resource type="AudioStream" uid="uid://btdo6rvt4w42n" path="res://Audio/pop_up_window.mp3" id="6_robp6"]

[node name="Audio" type="Node"]
script = ExtResource("1_nx56x")

[node name="Background_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_jur0f")
volume_db = -10.0
autoplay = true

[node name="click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_imk0r")

[node name="click_correct" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_a7q57")

[node name="click_uncorrect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_qgju1")

[node name="pop_up_window" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_robp6")
volume_db = -10.0

[node name="pop_down_window" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_robp6")
volume_db = -10.0
